--- a/waybar/style.css
+++ b/waybar/style.css
@@ -3,7 +3,7 @@
   border-radius: 0;
   min-height: 0;
   font-family: JetBrains Mono;
-  font-size: 12px;
+  font-size: 14px;
   
 }
 
@@ -26,7 +26,7 @@ window#waybar.hidden {
   min-width: 0; /* Fix weird spacing in materia (waybar #450) */
   box-shadow: inset 0 -3px transparent; /* Use box-shadow instead of border so the text isn't offset */
   padding: 6px 18px;
-  margin: 6px 3px;
+  margin: 6px 1px;
   border-radius: 8px;
   background-color: rgba(00, 00, 00, 1);
   color: #ffffff;
@@ -62,8 +62,8 @@ window#waybar.hidden {
 #clock,
 #tray {
   border-radius: 8px;
-  margin: 6px 3px;
-  padding: 6px 8px;
+  margin: 6px ;
+  padding: 8px;
   background-color: rgba(00, 00, 00, 1);
   color: #ffffff;
 }
@@ -72,7 +72,7 @@ window#waybar.hidden {
 #custom-logo {
   padding-right: 7px;
   padding-left: 7px;
-  margin-left: 16px;
+  margin-left: 4px;
   font-size: 14px;
   border-radius: 0px 0px 0px 8px;
   color: #ffffff;
@@ -111,8 +111,8 @@ window#waybar.hidden {
 }
 
 #backlight {
-  background-color: #dd00ff;
-  color: rgb(0, 0, 0);
+  background-color: rgba(00, 00, 00, 1);
+  color: #ffffff;
   border-radius: 8px;
 }
 
@@ -131,8 +131,8 @@ window#waybar.hidden {
 
 #clock {
   font-family: JetBrains Mono;
-  background-color: #dd00ff;
-  color: rgba(00, 00, 00, 1);
+  background-color: rgba(00, 00, 00, 1);
+  color: #ffffff;
   border-radius: 8px;
 }
 
@@ -145,17 +145,17 @@ window#waybar.hidden {
 }
 
 #custom-power {
-  background-color: #000000;
-  color: rgb(255, 0, 0);
-  margin-right: 16px;
+  background-color: rgba(00, 00, 00, 1);
+  color: #ffffff;
+  margin-right: 12px;
   border-radius: 8px;
 }
 
 
 tooltip {
 border-radius: 8px;
-padding: 2px;
-background-color: rgba(00, 00, 00, 0.6);
+padding: 4px;
+background-color: rgba(00, 00, 00, 0.8);
 }
 
 
