--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,7 +2,7 @@
   border: 0;
   border-radius: 0;
   min-height: 0;
-  font-family: JetBrains Mono;
+  font-family: JetBrains Mono Bold;
   font-size: 14px;
   
 }
@@ -26,14 +26,14 @@ window#waybar.hidden {
   min-width: 0; /* Fix weird spacing in materia (waybar #450) */
   box-shadow: inset 0 -3px transparent; /* Use box-shadow instead of border so the text isn't offset */
   padding: 6px 18px;
-  margin: 6px 1px;
+  margin: 1px 1px;
   border-radius: 8px;
   background-color: rgba(00, 00, 00, 1);
   color: #ffffff;
 }
 
 #workspaces button.active {
-  color: #dd00ff;
+  color: #ae00ff;
   background-color: rgba(00, 00, 00, 1);
   border-radius: 8px;
 }
@@ -41,7 +41,7 @@ window#waybar.hidden {
 #workspaces button:hover {
  box-shadow: inherit;
  text-shadow: inherit;
- color: #dd00ff;
+ color: #aa00ff;
  background-color: rgba(00, 00, 00, 1);
  border-radius: 8px;
 }
@@ -62,7 +62,7 @@ window#waybar.hidden {
 #clock,
 #tray {
   border-radius: 8px;
-  margin: 6px ;
+  margin: 0px ;
   padding: 8px;
   background-color: rgba(00, 00, 00, 1);
   color: #ffffff;
